# noir-bignum

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Nargo.toml  Prover.toml  README.md  benchmark-circuit.json  benchmark-opcodes.json  brillig_report.json  gates_report.json  info.sh  migration_notes.md  opcode_report.json  release-please-config.json
.github/: NIGHTLY_CANARY_DIED.md
.github/workflows/: benchmark.yml  benchmarks.yml  nightly-canary.yml  opcode_benchmark.yml  pull-request-title.yml  release.yml  test.yml
dev/bench/: data.js
examples/: README.md
examples/custom_modulus_example/: Nargo.toml  README.md
examples/ed25519_example/: Nargo.toml  Prover.toml  README.md
examples/runtime_modulus_example/: Nargo.toml  Prover.toml  README.md
export/: bench_add_BN256.json  bench_add_Fq.json  bench_div_BN256.json  bench_div_Fq.json  bench_mul_BN256.json  bench_mul_Fq.json  bench_sub_BN256.json  bench_sub_Fq.json  test_add_BN.json
lib/src/: lib.nr  runtime_bignum.nr
oracles/: .mocharc.json  Cargo.toml  build.sh  package-lock.json  package.json  tsconfig.json
oracles/nodejs/: oracle.d.ts  oracle.js  oracle_bg.wasm
oracles/src/: foreign_call.rs  handlers.rs  lib.rs  main.rs  ops.rs  params.rs
oracles/test/node/: add_test.test.ts  batch_invert.test.ts  div_test.test.ts  invmod_test.test.ts  is_zero.test.ts  mul_test.test.ts  myfirst.test.ts
oracles/web/: oracle.d.ts  oracle.js  oracle_bg.wasm  oracle_bg.wasm.d.ts
scripts/: build-brillig-execution-report.sh  build-brillig-gates-report.sh  build-brillig-report.sh  build-gates-report.sh  convert-reports.sh  generate-benchmark-inputs.sh
src/: arrayX.nr  bignum.nr  bignum_test.nr  constants.nr  constrained_ops.nr  expressions.nr  fields.nr  lib.nr  limbarithmetic.nr  main.nr  msb.nr  params.nr  runtime_bignum.nr  runtime_bignum_test.nr  serialization.nr  split_bits.nr  u60_representation.nr  unconstrained_helpers.nr  unconstrained_ops.nr  utils.nr
(+95 files in other folders)
